Fix custom fonts in CSS not showing up

--- a/cryptography/styles.css
+++ b/cryptography/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Itim&family=Open+Sans:ital,wght@0,400;0,600;1,400;1,600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;700&family=Itim&family=Open+Sans:ital,wght@0,400;0,600;1,400;1,600&display=swap');
 
 p {
     font-family: 'Open Sans', sans-serif;
@@ -10,7 +10,7 @@ p {
 }
 
 .is_code {
-    font-family: 'Fira Code', monospace;
+    font-family: 'Fira Mono', monospace;
 }
 
 .fullwidth {
